<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hazem.passwordbank.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameString"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/passwordString"
                    android:inputType="textPassword"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:orientation="horizontal">

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/yearSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    app:ms_arrowColor="#0000FF"
                    app:ms_arrowSize="0dp"
                    app:ms_floatingLabelColor="@color/colorPrimaryDark"
                    app:ms_floatingLabelText="@string/dayString"
                    app:ms_hint="@string/dayString"
                    app:ms_multiline="true" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/monthSpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    app:ms_arrowColor="#0000FF"
                    app:ms_arrowSize="0dp"
                    app:ms_floatingLabelColor="@color/colorPrimaryDark"
                    app:ms_floatingLabelText="@string/monthString"
                    app:ms_hint="@string/monthString"
                    app:ms_multiline="true" />

                <fr.ganfra.materialspinner.MaterialSpinner
                    android:id="@+id/daySpinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    app:ms_arrowColor="#0000FF"
                    app:ms_arrowSize="0dp"
                    app:ms_floatingLabelColor="@color/colorPrimaryDark"
                    app:ms_floatingLabelText="@string/yearString"
                    app:ms_hint="@string/yearString"
                    app:ms_multiline="true" />


            </LinearLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:text="@string/login" />
        </LinearLayout>

    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
